Bad layer handlig option feature - bug fixes

--- a/changeDataSource_dialog_base.ui
+++ b/changeDataSource_dialog_base.ui
@@ -117,6 +117,26 @@
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout_2">
      <item>
+      <spacer name="horizontalSpacer">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>40</width>
+         <height>20</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+     <item>
+      <widget class="QCheckBox" name="handleBadLayersCheckbox">
+       <property name="text">
+        <string>Handle bad layers</string>
+       </property>
+      </widget>
+     </item>
+     <item>
       <widget class="QPushButton" name="reconcileButton">
        <property name="text">
         <string>Reconcile unhandled</string>
@@ -125,6 +145,12 @@
      </item>
      <item>
       <widget class="QDialogButtonBox" name="buttonBox">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
        </property>
