--- a/changeDataSource_dialog_base.ui
+++ b/changeDataSource_dialog_base.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Change datasource globally</string>
+   <string>Change datasource</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
